Working prototype, building ai heuristik

--- a/VierGewinnt/VierGewinnt.vcxproj
+++ b/VierGewinnt/VierGewinnt.vcxproj
@@ -145,17 +145,21 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AiPlayer.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="InputHandler.cpp" />
+    <ClCompile Include="HumanPlayer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AiPlayer.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="GameManager.h" />
-    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="HumanPlayer.h" />
     <ClInclude Include="OwnershipEnum.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
