first working ai

--- a/VierGewinnt/VierGewinnt.vcxproj.filters
+++ b/VierGewinnt/VierGewinnt.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="AiPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Heuristik.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AiPlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Heuristik.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
