--- a/VierGewinnt/VierGewinnt.vcxproj
+++ b/VierGewinnt/VierGewinnt.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="AiPlayer.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Heuristik.cpp" />
     <ClCompile Include="HumanPlayer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="AiPlayer.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="Heuristik.h" />
     <ClInclude Include="HumanPlayer.h" />
     <ClInclude Include="OwnershipEnum.h" />
     <ClInclude Include="Player.h" />
