added commandlineparser, reworking negamax

--- a/VierGewinnt/VierGewinnt.vcxproj
+++ b/VierGewinnt/VierGewinnt.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="AiPlayer.cpp" />
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="CommandLineParser.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Heuristik.cpp" />
     <ClCompile Include="HumanPlayer.cpp" />
@@ -159,6 +160,7 @@
   <ItemGroup>
     <ClInclude Include="AiPlayer.h" />
     <ClInclude Include="Board.h" />
+    <ClInclude Include="CommandLineParser.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Heuristik.h" />
     <ClInclude Include="HumanPlayer.h" />
